tests/fail/UnsignedRight.java
package fail;

public class UnsignedRight {

    public static void main(String[] args) {
        return 1 >>> "Hej";
        
    } 
}